# cpp-assignment

./: CMakeLists.txt
assig-base2022/: README.md  add_composites.bat  assig2.vcxproj  assig2.vcxproj.backup2  setup.bat  temp.txt
assig-base2022/basicsource/: scene.cpp
assig-base2022/objects-student/: Composite2.cpp  Composite2.h
assig-base2022/resources/: cockpit_path.txt  cockpit_profile.txt  exhaust_profile.txt  windshield_path.txt  windshield_profile.txt
assig-base2022/support/: glew32.lib  platform.cpp
